# airhouse

./: .dockerignor  .dockerignore  .env  .env.example  .gitignore  README.md  docker-compose.yml  dockerfile  makefile  pyproject.toml
src/: main.py
src/core/: config.py  util.py
src/db/: database.py
src/db/model/: data.py
src/repo/: data.py
src/router/: data.py
src/schema/: base.py  response.py
src/service/: data.py
