[tool.poetry]
name = "airhouse"
version = "0.0.1"
description = ""
authors = ["Roman <iamromandev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.16"
loguru = "0.7.0"
fastapi = "0.100.0"
uvicorn = "0.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
